hard-gists/5090763/run.log
=== Docker Run Log for 5090763 ===
Started at: Mi 29. Okt 15:21:32 CET 2025

[2025-10-29 15:21:33] START: Running container for 5090763
[2025-10-29 15:21:33] SUCCESS: Container b6bc96f57bd48244c1fd23d07c0a5e21d388e7bbf3689d590438cceda387c7b4 started for 5090763
=== Container logs for 5090763 ===
  File "/snippet.py", line 20
    print "Generating image..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5090763 ===
[2025-10-29 15:21:35] INFO: Container b6bc96f57bd48244c1fd23d07c0a5e21d388e7bbf3689d590438cceda387c7b4 has stopped
